--- a/rm_sentry_FSM/CMakeLists.txt
+++ b/rm_sentry_FSM/CMakeLists.txt
@@ -13,6 +13,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 #######################
 
 find_package(ament_cmake_auto REQUIRED)
+find_package(yaml-cpp REQUIRED)
 ament_auto_find_build_dependencies()
 
 ###########
@@ -23,6 +24,7 @@ set(PACKAGE_INCLUDE_DEPENDS
     rm_decision_interfaces
     rclcpp
     std_msgs
+    yaml-cpp
 )
 
 # 定义宏函数 add_target_dependencies
@@ -30,11 +32,13 @@ function(add_target_dependencies target)
     target_include_directories(${target} PRIVATE $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>)
     ament_target_dependencies(${target} ${PACKAGE_INCLUDE_DEPENDS})
     target_compile_definitions(${target} PRIVATE BT_PLUGIN_EXPORT)
+    target_link_libraries(${target} yaml-cpp) # 链接 yaml-cpp 库
 endfunction()
 
 ament_auto_add_executable(rm_sentry_FSM
     src/rm_sentry_FSM.cpp
 )
+add_target_dependencies(rm_sentry_FSM) # 调用宏函数为目标添加依赖
 
 ament_auto_package()
 
